crates/libs/frieze-macros/tests/ui/enum_empty_unsupported.stderr
error: frieze: enums with no variants cannot be represented as an OAS schema.
 --> tests/ui/enum_empty_unsupported.rs:4:6
  |
4 | enum Empty {}
  |      ^^^^^
